implemented layout and index

--- a/notes_ever/templates/layout.html
+++ b/notes_ever/templates/layout.html
@@ -5,14 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes Ever: {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <script src="../static/jquery.min.js"></script>
+    <script src="../static/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </head>
 
 <body>
-
-    <main>
-        {% block main %}{% endblock %}
-    </main>
     
+      <!-- Sidebar Menu -->
+      <div class="ui vertical inverted sidebar menu">
+        <a class="active item">Home</a>
+        <a class="item">Work</a>
+        <a class="item">Company</a>
+        <a class="item">Careers</a>
+        <a class="item">Login</a>
+        <a class="item">Signup</a>
+      </div>
+      
+      
+      <!-- Page Contents -->
+      <header>
+        <div class="pusher">
+          <div class="ui inverted vertical masthead center aligned segment">
+            <div class="ui container">
+              <div class="ui large secondary inverted pointing menu ">
+                <a class="toc item">
+                  <i class="sidebar icon large"></i>
+                </a>
+                <a class="active item hide-in-mobile">Home</a>
+                <a class="item hide-in-mobile">Work</a>
+                <a class="item hide-in-mobile">Company</a>
+                <a class="item hide-in-mobile">Careers</a>
+                <div class="right item row ">
+                  <a style="right: 15%;" class="ui inverted button hide-in-mobile ">Log in</a>
+                  <a class="ui inverted button hide-in-mobile">Sign Up</a>
+                </div>
+              </div>
+              <div>
+                <div>
+                    {% block main %}
+                    
+                    {% endblock %}
+                </div>
+              </div>
+            </div>      
+          </div>
+        </div>
+      </header>
+    
+    <footer>
+        <div class="ui inverted vertical footer segment">
+            <div class="ui container">
+              <div class="ui stackable inverted divided equal height stackable grid ">
+                <div class="thirteen wide column">
+                  <h3 class="ui inverted header">Contact Us</h3>
+                  <h5 class="ui inverted header"><a href="">Email</a></h5>
+                </div>
+                <div style="justify-content: right;" class="three wide column">
+                    <h2 class="ui inverted header">About</h2>
+                    <div class="ui inverted link list">
+                        <h5 class="ui inverted header">A Project By Team Build Huge</h5>
+                      <a href="https://github.com/vkweb" class="item">Vivek Agarwal</a>
+                      <a href="https://github.com/pranay101" class="item">Pranay Prajapati</a>
+                      <a href="https://github.com/ozer619" class="item">Prathmesh Desai</a>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+    </footer>   
 </body>
 </html>
