--- a/notes_ever/templates/index.html
+++ b/notes_ever/templates/index.html
@@ -3,76 +3,77 @@
 {% block title %} Welcome {% endblock %}
 
 {% block main %}
+<div class="container">
+  <div style="background-color:#1b1c1d;padding-bottom: 1%;margin: 0%;" class="ui divider"></div>
+  <div>
     <div>
-        <div class="ui container right aligned">
-            <span>
-                <h1 style="color: white;" class="ui huge header ">Notes Ever</h1>
-                <h3 class="ui grey header">this is tagline , btw we didn't think about it till now</h3>
-                <br>
-                <br>
-                <br>
-            </span>
-            <div>
-                <div class="ui cards">
-                    <div style="background-color:lightgray;" class="ui  card justified">
-                        <div class="content">
-                          <div style="text-align: center;" class="header">View and Download Notes</div>
-                        </div>
-                        <div class="content">
-                          <div class="ui small feed">
-                            <div class="event">
-                              <div class="content">
-                                <div class="summary">
-                                   <h4 class="header">You need to sign-in with your SSIPMT Account</h4>
-                                </div>
-                              </div>
-                            </div>
-                            <br>
-                            <div class="event">
-                              <div class="content">
-                                <div class="summary">
-                                   <p class="description">To learn more about this website click <a href="about.html">here</a></p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="extra content center aligned">
-                          <button class="ui button blue ">Login as Student</button>
-                        </div>
-                      </div>
-                      <div style="background-color:lightgray;" class="ui card left aligned">
-                        <div class="content">
-                          <div style="text-align: center;" class="header">Upload and Alter Notes</div>
-                        </div>
-                        <div class="content">
-                          <div class="ui small feed">
-                            <div class="event">
-                              <div class="content">
-                                <div class="summary">
-                                   <h5 class="header">You need to sign-in with your secured-SSIPMT Account</h4>
-                                </div>
-                              </div>
-                            </div>
-                            <br>
-                            <div class="event">
-                              <div class="content">
-                                <div class="summary">
-                                   <p class="description">Only for Faculty</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="extra content center aligned">
-                          <button class="ui button blue ">Login as Faculty</button>
-                        </div>
-                      </div>
-                </div>
-              </div>  
-            </div>
-        </div>
+      <h2 style="color: white;font-size: 60px;line-height: 0em;margin-top: 2.2em;" class="ui huge header heading-in-mobile">Notes Ever</h2>
+      <h6 style="color: gainsboro" class="ui medium header sub-heading-in-mobile" >Matching developers with great companies.</h6>
     </div>
+    <div>
+      <div style="padding-top:5%; padding-bottom: 5%;" >
+        <div class=" ui cards centered">
+          <div style="background-color:lightgray;;" class="ui card ">
+              <div class="content">
+                <div style="text-align: center;" class="header">View and Download Notes</div>
+              </div>
+              <div class="content">
+                <div class="ui small feed">
+                  <div class="event">
+                    <div class="content">
+                      <div class="summary">
+                         <h4 class="header">You need to sign-in with your SSIPMT Account</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="event">
+                    <div class="content">
+                      <div class="summary">
+                         <p class="description">To learn more about this website click <a href="about.html">here</a></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="extra content center aligned">
+                <button class="ui button blue ">Login as Student</button>
+              </div>
+            </div>
+            <div style="background-color:lightgray;" class="ui card left aligned">
+              <div class="content">
+                <div style="text-align: center;" class="header">Upload and Alter Notes</div>
+              </div>
+              <div class="content">
+                <div class="ui small feed">
+                  <div class="event">
+                    <div class="content">
+                      <div class="summary">
+                         <h4 class="header">You need to sign-in with your secured-SSIPMT Account</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="event">
+                    <div class="content">
+                      <div class="summary">
+                         <p class="description">Only for Faculty</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="extra content center aligned">
+                <button class="ui button blue ">Login as Faculty</button>
+              </div>
+            </div>
+      </div>
+      </div>
+    </div>
+  
+      
+  <div style="background-color:#1b1c1d;padding-bottom: 1%;margin: 0%;" class="ui divider"></div>
+</div>
 
     
 {% endblock %}
