--- a/notes_ever/templates/index.html
+++ b/notes_ever/templates/index.html
@@ -40,6 +40,7 @@
                 <button class="ui button blue ">Login as Student</button>
               </div>
             </div>
+            <div class="padding-space" style="color: #1b1c1d;">-</div>
             <div style="background-color:lightgray;" class="ui card left aligned">
               <div class="content">
                 <div style="text-align: center;" class="header">Upload and Alter Notes</div>
