--- a/notes_ever/templates/layout.html
+++ b/notes_ever/templates/layout.html
@@ -43,30 +43,10 @@
                     
                     {% endblock %}
               </div>
+              <p class="description ">All Copy Right Reserved / Build Huge</p>
             </div>      
           </div>
         </div>
       </header>
-    <footer>
-        <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-              <div class="ui stackable inverted divided equal height stackable grid ">
-                <div class="thirteen wide column">
-                  <h3 class="ui inverted header">Contact Us</h3>
-                  <h5 class="ui inverted header"><a href="">Email</a></h5>
-                </div>
-                <div style="justify-content: right;" class="three wide column">
-                    <h2 class="ui inverted header">About</h2>
-                    <div class="ui inverted link list">
-                        <h5 class="ui inverted header">A Project By Team Build Huge</h5>
-                      <a href="https://github.com/vkweb" class="item">Vivek Agarwal</a>
-                      <a href="https://github.com/pranay101" class="item">Pranay Prajapati</a>
-                      <a href="https://github.com/ozer619" class="item">Prathmesh Desai</a>
-                    </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-    </footer>   
 </body>
 </html>
