--- a/notes_ever/templates/layout.html
+++ b/notes_ever/templates/layout.html
@@ -27,26 +27,28 @@
         <div class="pusher">
           <div class="ui inverted vertical masthead center aligned segment">
             <div class="ui container">
-              <div class="ui large secondary inverted pointing menu ">
+              <div class="ui large secondary inverted pointing menu">
+
                 <a class="toc item">
                   <i class="sidebar icon large"></i>
                 </a>
+
                 <a class="active item hide-in-mobile">Home</a>
                 <a class="item hide-in-mobile">Features</a>
                 <a class="item hide-in-mobile">About</a>
-                <div class="right item row ">
+                <div class="right item row">
                   <button class="ui inverted button hide-in-mobile">Login With Google</button>
                 </div>
               </div>
-              <div>
-                    {% block main %}
-                    
-                    {% endblock %}
-              </div>
-              <p class="description ">All Copy Right Reserved / Build Huge</p>
-            </div>      
+
+              <p class="description">Built with passion by the <strong><a href="https://github.com/buildHuge/Notes-Ever">buildHuge Team</strong></a>.</p>
+            </div>  
           </div>
         </div>
       </header>
+      
+      <main>
+        {% block main %}{% endblock %}
+      </main>
 </body>
 </html>
