fix: unnecessary frontend code

--- a/notes_ever/templates/index.html
+++ b/notes_ever/templates/index.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
 
-{% block title %} welcome {% endblock %}
+{% block title %} Welcome {% endblock %}
 
 {% block main %}
-<div style="background-color:#1b1c1d;padding-bottom: 1%;margin: 0%;" class="ui divider"></div>
+
+<div class="ui divider"></div>
 
 <h2 style="color: white;font-size: 60px;line-height: 0em;margin-top: 1.2em;" class="ui huge header heading-in-mobile">
   Notes Ever</h2>
+
 <h6 style="color: gainsboro" class="ui medium header sub-heading-in-mobile">A complete solution for teachers to
   share notes with students</h6>
 
