--- a/notes_ever/templates/index.html
+++ b/notes_ever/templates/index.html
@@ -39,7 +39,9 @@
         </div>
       </div>
       <div class="extra content center aligned">
-        <button class="ui button blue ">Login as Student</button>
+        <a href="/student-login">
+          <button class="ui button blue">Login as Student</button>
+        </a>
       </div>
     </div>
     <div class="padding-space" style="color: #1b1c1d;">-</div>
